[workspace]
resolver = "2"

members = ["aoc_utils", "day-17", "day-18", "day-19"]
default-members = []                                  # day-2*

[workspace.dependencies]
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
rstest = "0.18.2"
criterion = "0.5"
aoc_utils = { path = "./aoc_utils" }

[profile.release]
lto = true
codegen-units = 1
