[package]
name = "day-17"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
aoc_utils = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "day-17-bench"
path = "benches/benchmark.rs"
harness = false
