[package]
name = "day-19"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
aoc_utils = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "day-19-bench"
path = "benches/benchmark.rs"
harness = false
